--- a/vsftpd-compose.yml
+++ b/vsftpd-compose.yml
@@ -4,4 +4,4 @@ ftpd:
         - "20-21:20-21"
         - "65500-65515:65500-65515"
     volumes:
-        - "/tmp:/var/ftp:ro"
+        - "/media/common/DOCKER_IMAGES/Tensorflow:/var/ftp:ro
